implementatie uitzonderingen voltooid + cleanup voor Java 21